<?xml version="1.0" encoding="utf-8"?>

    
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_1" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3" />

   </LinearLayout>
   
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_2" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_3" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"
           android:focusable="false" />

   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_4" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_5" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_6" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_7" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_8" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker8"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" 
       android:weightSum="4">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_9" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker9"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_marker_10" 
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/editTextMarker10"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="3"/>
   </LinearLayout> 
</LinearLayout>
</ScrollView>  
